--- a/index.html
+++ b/index.html
@@ -309,6 +309,10 @@
         "@context": "https://schema.org/",
         "@type": "Product",
         "name": "Himmelblau KÖNIGSKÜHL Diplomat DK-80",
+        "inventor": {
+            "@type": "Person",
+            "name": "Leon Li"
+        },
         "manufacturer": {
             "@type": "Organization",
             "name": "KÖNIGSKÜHL GmbH",
@@ -371,7 +375,7 @@
         <!-- Introductory text with realism and context -->
         <p class="intro-text">
             Experience the future of refrigeration with our upcoming flagship model: the Himmelblau KÖNIGSKÜHL Diplomat DK-80. 
-            Scheduled for release in May 2025, this revolutionary AI-augmented refrigerator represents the pinnacle of German engineering 
+            Invented by Leon Li and scheduled for release in May 2025, this revolutionary AI-augmented refrigerator represents the pinnacle of German engineering 
             and artificial intelligence. Our advanced AI system dynamically adapts internal temperature and humidity settings based on 
             the types of groceries you store, while real-time analytics ensure optimal preservation of your food.
         </p>
@@ -379,8 +383,7 @@
         <p class="intro-text highlighted-notice">
             <strong>Pre-Release Notice:</strong><br>
             As we prepare for the May 2025 launch, we're offering select customers early waitlist access 
-            for this revolutionary appliance. Please note that our website domain is currently 
-            under development. In the meantime, scroll down to fill out the form below to secure your 
+            for this revolutionary appliance. Fill out the form below to secure your 
             position on our priority waitlist and receive exclusive updates before the public release.
         </p>
 
