--- a/index.html
+++ b/index.html
@@ -309,10 +309,6 @@
         "@context": "https://schema.org/",
         "@type": "Product",
         "name": "Himmelblau KÖNIGSKÜHL Diplomat DK-75",
-        "inventor": {
-            "@type": "Person",
-            "name": "Leon Li"
-        },
         "manufacturer": {
             "@type": "Organization",
             "name": "KÖNIGSKÜHL GmbH",
@@ -366,8 +362,8 @@
 
         <!-- Exclusive Offer Banner -->
         <div class="exclusive-offer-banner">
-            Join Our Exclusive Waitlist: The KÖNIGSKÜHL Diplomat DK-75 launches May 2025. 
-            Fill out your details below to secure your spot and receive exclusive early-access opportunities.
+            Get Detailed Technical Information About the KÖNIGSKÜHL Diplomat DK-75 (May 2025).
+            Fill out your details below to receive comprehensive specifications and features.
         </div>
 
         <h2>The Himmelblau KÖNIGSKÜHL Diplomat DK-75 (Coming May 2025)</h2>
@@ -375,44 +371,31 @@
         <!-- Introductory text with realism and context -->
         <p class="intro-text">
             Experience the future of refrigeration with our upcoming flagship model: the Himmelblau KÖNIGSKÜHL Diplomat DK-75. 
-            Invented by Leon Li and scheduled for release in May 2025, this revolutionary AI-augmented refrigerator represents the pinnacle of German engineering 
+            Scheduled for release in May 2025, this revolutionary AI-augmented refrigerator represents the pinnacle of German engineering 
             and artificial intelligence. Our advanced AI system dynamically adapts internal temperature and humidity settings based on 
             the types of groceries you store, while real-time analytics ensure optimal preservation of your food.
         </p>
 
         <p class="intro-text highlighted-notice">
-            <strong>Pre-Release Notice:</strong><br>
-            As we prepare for the May 2025 launch, we're offering select customers early waitlist access 
-            for this revolutionary appliance. Fill out the form below to secure your 
-            position on our priority waitlist and receive exclusive updates before the public release.
+            <strong>Technical Information Request:</strong><br>
+            Complete the form below to receive detailed technical specifications, features list, 
+            and comprehensive documentation about the KÖNIGSKÜHL Diplomat DK-75.
         </p>
 
-        <!-- Key Features Section with 3 columns -->
-        <div class="key-features">
-            <h3>Key Features & Innovations</h3>
-            <div class="features-grid">
-                <div class="feature-column">
-                    <ul>
-                        <li>AI-Powered Cooling: Automatically adjusts temperature and humidity based on food type.</li>
-                        <li>Real-time Food Scan: Sensor-based recognition for meat, produce, dairy, or frozen goods.</li>
-                        <li>Smartphone Connectivity: Use the KÖNIGSKÜHL Companion App for remote monitoring.</li>
-                    </ul>
-                </div>
-                <div class="feature-column">
-                    <ul>
-                        <li>Energy Efficiency: Eco-friendly modes optimize power usage for reduced bills.</li>
-                        <li>Seamless Integration: Compatible with leading smart home ecosystems.</li>
-                        <li>Dynamic Storage: Modular compartments with tailored climate settings.</li>
-                    </ul>
-                </div>
-                <div class="feature-column">
-                    <ul>
-                        <li>Timeless German Design: Signature Bauhaus-inspired silhouette.</li>
-                        <li>Premium Materials: High-grade stainless steel construction.</li>
-                        <li>Smart Display: Intuitive touch interface with real-time monitoring.</li>
-                    </ul>
-                </div>
-            </div>
+        <!-- New Warning Bar -->
+        <div style="
+            background-color: #ffebee;
+            border: 3px solid #ff0000;
+            color: #c62828;
+            padding: 20px;
+            margin: 30px 0;
+            text-align: center;
+            font-size: 24px;
+            font-weight: bold;
+            border-radius: 8px;
+            animation: pulse 2s infinite;
+        ">
+            ⚠️ COMPLETE THE FORM BELOW TO FULFILL YOUR REQUEST AND RECEIVE DETAILED TECHNICAL INFORMATION !!! ⚠️
         </div>
 
         <!-- Form with three columns -->
@@ -441,7 +424,7 @@
             </div>
 
             <div class="buttons-group">
-                <input type="submit" value="Join the Waitlist and Receive Pre-Release Information">
+                <input type="submit" value="Get Detailed Technical Information">
             </div>
         </form>
 
